test_suite5/ALAN/test_suite/alan-2022-examples/failing/001640_mutation.alan
source h5 begin call k(6 integer) end
